# JANA2

./: CMakeLists.txt
scripts/: jana-generate.py
scripts/hello/: CMakeLists.txt  hello.cc
src/plugins/streamDet/: README.md
